--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
+    "bootstrap": "^5.3.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^4.1.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
